--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.2",
-    "nodemailer": "^6.9.14"
+    "nodemailer": "^6.9.14",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2"
