--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "axios": "^1.7.3",
+    "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "nookies": "^2.5.2",
     "react": "^18.3.1",
