--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,10 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.2",
-    "nodemailer": "^6.9.14",
     "express-session": "^1.18.0",
+    "googleapis": "^142.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.2"
+    "mongoose": "^8.5.2",
+    "nodemailer": "^6.9.14"
   }
 }
