--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "googleapis": "^142.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
-    "nodemailer": "^6.9.14"
+    "nodemailer": "^6.9.14",
+    "otp-generator": "^4.0.1"
   }
 }
